<?xml version="1.0" encoding="utf-8"?>
<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools">-->

    <!--<data>-->

        <!--<import type="android.view.View" />-->


        <!--<variable-->
            <!--name="viewModel"-->
            <!--type="com.example.smvec.chatbotapplication.ui.login.Registration.RegistrationViewModel" />-->
    <!--</data>-->


<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_effective"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/new_user_registration"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/newEmailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/newPasswordEt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/cancel_btn_heading"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:layout_marginRight="8dp"
                android:textSize="15dp" />


            <Button
                android:id="@+id/registerBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/register_btn_heading"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/pbIndicator"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
            <!--android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />-->


    </android.support.design.widget.CoordinatorLayout>
<!--</layout>-->